--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-/echoppe/nbproject/private/
-/echoppe/constants.php
-/echoppe/css/style.css 
+echoppe/nbproject/private/
+echoppe/constants.php
+echoppe/css/style.css 
